<resources>
    <string name="app_name">ReSCAP</string>

    <!--Todo Some changes have been made here-->

    <string-array name="options">
        <item>Sign up as</item>
        <item>PHYSICIAN</item>
        <item>PATIENT</item>
        <item>CARE-GIVER</item>
    </string-array>

    <string-array name="consents">
        <item>Consent</item>
        <item>Always share</item>
        <item>Ask before Share</item>
    </string-array>

    <string-array name="conditions">
        <item>Condition</item>
        <item>Diabetes Mellitus (Dm)</item>
        <item>Cancer(Ce)</item>
        <item>Stroke (St)</item>
        <item>HIV/AIDS (Hv)</item>
        <item>Coronary Artery Disease (Ch)</item>
    </string-array>

    <!--<string-array name="conditions">-->
        <!--<item>Condition</item>-->
        <!--<item>AIDS</item>-->
        <!--<item>Cancer</item>-->
        <!--<item>Cardiac diseases</item>-->
        <!--<item>Diabetes</item>-->
        <!--<item>Ebola</item>-->
        <!--<item>Flu</item>-->
        <!--<item>Herpes</item>-->
        <!--<item>HIV</item>-->
        <!--<item>Leprosy</item>-->
        <!--<item>Leukemia</item>-->
        <!--<item>Parkison\'s disease</item>-->
        <!--<item>Polio</item>-->
        <!--<item>Ulcer</item>-->
        <!--<item>Tuberculosis</item>-->
        <!--<item>Whooping cough</item>-->
    <!--</string-array>-->

    <string-array name="severity">
        <item>Early</item>
        <item>Mild</item>
        <item>Severe</item>
    </string-array>

    <!--<string-array name="severity">-->
    <!--<item>Severity</item>-->
    <!--<item>Mild</item>-->
    <!--<item>Average</item>-->
    <!--<item>Acute</item>-->
    <!--</string-array>-->

    <string-array name="populate">
        <item>Diabetes Mellitus (Dm)</item>
        <item>Cancer(Ce)</item>
        <item>Stroke (St)</item>
        <item>HIV/AIDS (Hv)</item>
        <item>Coronary Artery Disease (Ch)</item>
    </string-array>

    <!--<string-array name="populate">-->
        <!--<item>AIDS</item>-->
        <!--<item>Cancer</item>-->
        <!--<item>Cardiac diseases</item>-->
        <!--<item>Diabetes</item>-->
        <!--<item>Ebola</item>-->
        <!--<item>Flu</item>-->
        <!--<item>Herpes</item>-->
        <!--<item>HIV</item>-->
        <!--<item>Leprosy</item>-->
        <!--<item>Leukemia</item>-->
        <!--<item>Parkison\'s disease</item>-->
        <!--<item>Polio</item>-->
        <!--<item>Ulcer</item>-->
        <!--<item>Tuberculosis</item>-->
        <!--<item>Whooping cough</item>-->
    <!--</string-array>-->

    <string-array name="expertise">
        <item>Specialization</item>
        <item>Diabetes Mellitus (Dm)</item>
        <item>Cancer(Ce)</item>
        <item>Stroke (St)</item>
        <item>HIV/AIDS (Hv)</item>
        <item>Coronary Artery Disease (Ch)</item>
    </string-array>

    <!--<string-array name="expertise">-->
        <!--<item>Specialization</item>-->
        <!--<item>AIDS</item>-->
        <!--<item>Cancer</item>-->
        <!--<item>Cardiac diseases</item>-->
        <!--<item>Diabetes</item>-->
        <!--<item>Ebola</item>-->
        <!--<item>Flu</item>-->
        <!--<item>Herpes</item>-->
        <!--<item>HIV</item>-->
        <!--<item>Leprosy</item>-->
        <!--<item>Leukemia</item>-->
        <!--<item>Parkison\'s disease</item>-->
        <!--<item>Polio</item>-->
        <!--<item>Ulcer</item>-->
        <!--<item>Tuberculosis</item>-->
        <!--<item>Whooping cough</item>-->
    <!--</string-array>-->

    <string-array name="countries">
        <item>Nigeria (NG)</item>
        <item>Finland (FL)</item>
        <item>United States of America (US)</item>
        <item>China (CH)</item>
        <item>Mexico (MX)</item>
    </string-array>

    <!--<string-array name="countries">-->
        <!--<item>Location</item>-->
        <!--<item>Algeria</item>-->
        <!--<item>Angola</item>-->
        <!--<item>Australia</item>-->
        <!--<item>Botswana</item>-->
        <!--<item>Brazil</item>-->
        <!--<item>China</item>-->
        <!--<item>Cuba</item>-->
        <!--<item>Niger</item>-->
        <!--<item>Nigeria</item>-->
        <!--<item>Peru</item>-->
        <!--<item>Russia</item>-->
        <!--<item>UK</item>-->
        <!--<item>USA</item>-->
    <!--</string-array>-->

    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="action_settings">Settings</string>
    <string name="retry">Retry</string>
    <string name="app_logo">logo</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_acc">No account yet? Sign up</string>
    <string name="log_in">Log in</string>
    <string name="my_patients">MyPatients</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home_patient">HomeActivityPatient</string>
    <string name="title_activity_home_caregiver">HomeActivityCaregiver</string>

    <string name="send">Send</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="phy_response">Waiting for Physician\'s response!</string>
    <string name="page_empty">Page Empty</string>
    <string name="message_all">Message All</string>
    <string name="delegate_caregiver">Delegate Caregiver</string>
    <string name="enter_message">Enter message</string>

</resources>
